--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -26,7 +26,14 @@
       </div>
     </nav>
 
-    
+    <mat-nav-list>
+      <mat-list-item *ngFor="let link of fillerNav">
+         <a matLine href="...">{{ link.obj.label }}</a>
+         <button mat-icon-button color="primary">
+            <mat-icon>favorite</mat-icon>
+         </button>
+      </mat-list-item>
+    </mat-nav-list>
     <span>
       <p *ngFor="let content of fillerContent">{{content}}</p>
     </span>
