--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -11,11 +11,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
-      <a class="btn btn-secondary" href="#" role="button" 
-          aria-haspopup="true" aria-expanded="false">
-          Lorenzo
-        </a>
-      <div class="dropdown show" *ngFor="let x of fillerNav">
+      <div class="dropdown show" *ngFor="let x of selectedItems">
         <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           {{x.obj.label}}
@@ -29,13 +25,11 @@
     <mat-nav-list>
       <mat-list-item *ngFor="let link of fillerNav">
          <a matLine href="...">{{ link.obj.label }}</a>
-         <button mat-icon-button color="primary">
-            <mat-icon>favorite</mat-icon>
+         <button mat-icon-button (click)="doSomething(link)" >
+            <mat-icon *ngIf="!link.obj.isFavourite">favorite</mat-icon>
+            <mat-icon *ngIf="link.obj.isFavourite" style="color:red">favorite</mat-icon>
          </button>
       </mat-list-item>
     </mat-nav-list>
-    <span>
-      <p *ngFor="let content of fillerContent">{{content}}</p>
-    </span>
   </div>
 </div>
